[package]
name = "jismesh-to-sql"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
clap = { version = "4.5", features = ["derive"] }
deadpool-postgres = "0.14.1"
derive_builder = "0.20.2"
futures-util = "0.3.31"
geo-types = "0.6"
indicatif = { version = "0.17.11", features = ["tokio"] }
jismesh = "0.1.2"
km-to-sql = "0.1.1"
ndarray = "0.16.1"
num_cpus = "1"
# jismesh = { path = "../jismesh-rs" }
serde = "1.0.219"
serde_json = "1"
strum = "0.27.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_6", "with-serde_json-1"] }
url = "2.5.4"
